[package]
name = "hello-teams"
version = "0.1.0"
authors = ["Tony Curtis <anthony.curtis@stonybrook.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shmem = { path = "../shmem" }
hostname = "^0.3"
uname = "0.1.1"
