[package]
name = "shmem"
version = "0.1.0"
authors = ["Tony Curtis <anthony.curtis@stonybrook.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shmemlib = { path = "../shmemlib" }
libc = "0.2"
enum_dispatch = "0.3.2"
uname = "0.1.1"
state = "0.5"
